--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -38,25 +38,22 @@
     font-size: 16px;
     outline: none;
     transition: border-color 250ms var(--timing-function);
-}
-
-.modal-form-input:last-child{
-    height: 120px;
-    padding: 10px;
-}
-
-.modal-form-input:focus{
-    border-color: var(--accent-hover-color);
-}
-
-.modal-form-input:focus + .input-icon{
-    fill: var(--accent-hover-color);
-}
-
-.modal-form-input::placeholder{
-    font-weight: 400;
-    color: rgba(33, 33, 33, 0.2);
-    opacity: 0.5;
+    &:last-child{
+        height: 120px;
+        padding: 10px;
+    }
+    &:focus{
+        border-color: var(--accent-hover-color);
+    }
+    &:focus + .input-icon{
+        fill: var(--accent-hover-color);
+    }
+    &::placeholder{
+        font-weight: 400;
+        color: rgba(33, 33, 33, 0.2);
+        opacity: 0.5;
+    
+    }
 
 }
 
@@ -89,15 +86,13 @@
     align-items: center;
     justify-content: center;
     margin-right: 7px;
-}
-
-.check-icon{
-    fill: #ffffff;
-}
-
-.modal-check:checked + .check-text .check-item{
+    .modal-check:checked + .check-text &{
     background-color: var(--accent-hover-color);
     border: none;
+    }
+}
+.check-icon{
+    fill: #ffffff;
 }
 
 .contract-link{
