--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.backdrop{
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.2);
@@ -7,12 +7,7 @@
     transition: opacity 250ms, visibility 250ms;
 }
 
-.backdrop.is-hidden .modal {
-    transform: scale(1.5);
-    transition: transform 250ms var(--timing-function);
-}
-
-.modal {
+.modal{
     width: 528px;
     min-height: 581px;
     background-color: var(--main-title-color);
@@ -27,9 +22,13 @@
     transform: scale(1);
     transform: translate(-50%, -50%);
     transition: transform 250ms var(--timing-function);
+    .backdrop.is-hidden  &{
+        transform: scale(1.5);
+        transition: transform 250ms var(--timing-function);
+    }
 }
 
-.modal-close {
+.modal-close{
     width: 30px;
     height: 30px;
     background-color: transparent;
@@ -49,7 +48,7 @@
     fill: var(--accent-hover-color);
 }
 
-.is-hidden {
+.is-hidden{
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
