--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,30 +1,14 @@
-.section{
-    padding-top: 94px;
-    padding-bottom: 94px;
-
-}
-.visualy-hidden{
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;  
-}
 .about-list{
     display: flex;
 }
 
 .about-item{
 width: 270px;
+    &:not(:last-child){
+        margin-right: 30px;
+    }
 }
-.about-item:not(:last-child){
-    margin-right: 30px;
-}
+
 .about-head{
     font-weight: 700;
     font-size: 14px;
