--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -29,22 +29,20 @@
     border-radius: 4px;
     transition: color 250ms var(--timing-function), 
     border-color 250ms var(--timing-function);
+    &:hover,
+    &:focus{
+        color: var(--accent-hover-color);
+        border-color: var(--accent-hover-color);
+    }
 }
 
 .clients-item{
     display: block;
     width: 170px;
     height: 92px;
-}
-
-.clients-item + .clients-item{
-    margin-left: 30px;
-}
-
-.client-link:hover,
-.client-link:focus{
-    color: var(--accent-hover-color);
-    border-color: var(--accent-hover-color);
+    & + .clients-item{
+        margin-left: 30px;
+    }
 }
 
 .clients-link-icon{
