--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -30,11 +30,6 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     transition: color 250ms var(--timing-function);
-
-
-}
-.contacts-item:not(:last-child){
-    margin-bottom: 10px;
 }
 
 .logo-studio-footer{
@@ -58,7 +53,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    color: var(--footer-contacts-color);
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     transition: color 250ms var(--timing-function);
@@ -89,9 +83,9 @@
 .join-social-item{
     width: 44px;
     height: 44px;
-}
-.join-social-item + .join-social-item{
-    margin-left: 10px;
+    & + .join-social-item{
+        margin-left: 10px;
+    }
 }
 
 .join-social-link{
@@ -104,13 +98,14 @@
     color: #FFFFFF;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms var(--timing-function);
+    &:hover,
+    &:focus{
+        background-color: var(--accent-hover-color);
+    }
 }
+
 .join-social-icon{
     fill: currentColor;
-}
-.join-social-link:hover,
-.join-social-link:focus{
-    background-color: var(--accent-hover-color);
 }
 
 /* ------ПОДПИШИСЬ---------------- */
@@ -153,11 +148,10 @@
     outline: none;
     transition: border-color 250ms var(--timing-function),
     color 250ms var(--timing-function);
-}
-
-.subscribe-input:focus{
-    border-color: var(--main-title-color);
-    color: var(--main-title-color);
+    &:focus{
+        border-color: var(--main-title-color);
+        color: var(--main-title-color);
+    }
 }
 
 .subscribe-btn{
@@ -165,17 +159,14 @@
     align-items: center;
     width: 200px;
     height: 50px;
-    border: none;
-    border-radius: 4px;
-    background-color: var(--accent-color);
-    color: var(--main-title-color);
-    margin: 0 auto;
-    padding: 10px 28px;
-    cursor: pointer;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    background-color: var(--accent-color);
+    color: var(--main-title-color);
+    margin: 0 auto;
+    padding: 10px 28px;
     margin-left: 12px;
 }
 
