--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,10 +13,11 @@
 }
 .header-item{
     font-family: Roboto;
+    &:not(:last-child){
+        margin-right: 50px;
+    }
 }
-.header-item:not(:last-child){
-    margin-right: 50px;
-}
+
 .contacts-list{
     display: flex;
     align-items: center;
@@ -27,7 +28,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    Letter-spacing: 0.02em;
+    letter-spacing: 0.02em;
     padding-top: 32px;
     padding-bottom: 32px;
     color: var(--secondary-title-color);
@@ -43,21 +44,21 @@
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms var(--timing-function);
+    &.current::after{
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-hover-color);
+        opacity: 1;
+        transition: color 250ms var(--timing-function);
+    }
 }
-.header-light.current::after{
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-hover-color);
-    opacity: 1;
-    transition: color 250ms var(--timing-function);
-}
-    
+
 .current{
     color: var(--accent-hover-color);
 }
@@ -66,7 +67,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    Letter-spacing: 0.02em;
+    letter-spacing: 0.02em;
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;  
@@ -82,14 +83,14 @@
     align-items: center;
     margin-right: 10px;
     fill: currentColor;
-}
-.icon-envelope::before{
-    content: "";
-    display: block;
-    width: 16px;
-    height: 12px;
-    background-image: url(../images/svg/envelope.svg);
-    background-size: contain;
+    &::before{
+        content: "";
+        display: block;
+        width: 16px;
+        height: 12px;
+        background-image: url(../images/svg/envelope.svg);
+        background-size: contain;
+    }
 }
 
 .icon-phone{
@@ -97,12 +98,12 @@
     align-items: center;
     margin-right: 10px;
     fill: currentColor;
-}
-.icon-phone::before{
-    contain: "";
-    display: block;
-    width: 10px;
-    height: 16px;
-    background-image: url(../images/svg/phone.svg);
-    background-size: contain;
+    &::before{
+        contain: "";
+        display: block;
+        width: 10px;
+        height: 16px;
+        background-image: url(../images/svg/phone.svg);
+        background-size: contain;
+    }
 }
