--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,12 +3,11 @@
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-}
-
-.portfolio-list >.portfolio-item{
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-    margin-top: 30px;
+    & >.portfolio-item{
+        flex-basis: calc(100% / 3 - 30px);
+        margin-left: 30px;
+        margin-top: 30px;
+    }
 }
 .portfolio-item:hover .portfolio-item-text,
 .portfolio-item:focus .portfolio-item-text{
@@ -40,14 +39,13 @@
 .portfolio-link{
     display: block;
     transition: box-shadow 250ms var(--timing-function);
-}
-.portfolio-link:hover,
-.portfolio-link:focus {
+    &:hover,
+    &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
-
 .portfolio-item-wrap{
     position: relative;
     overflow: hidden;
