--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -8,14 +8,15 @@
     box-shadow: 0px 2px rgba(0, 0, 0, 0.2),
     0px 1px rgba(0, 0, 0, 0.14),
     0px 1px rgba(0, 0, 0, 0.12);
+    &:not(:last-child){
+        margin-right: 30px;
+    }
 }
 
 .team-list{
     display: flex;
 }
-.team-item:not(:last-child){
-    margin-right: 30px;
-}
+
 .team-worker{
     font-style: 500;
     font-size: 16px;
@@ -33,7 +34,7 @@
 .team-porfolio{
     font-size: 16px;
     line-height: 1.17;
-    Letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
     color: var(--main-text-color);
     margin-top: 10px;
 }
@@ -47,11 +48,10 @@
 .worker-social-item{
     width: 44px;
     height: 44px;
+    & + .worker-social-item{
+        margin-left: 10px;
+    }
 }
-.worker-social-item + .worker-social-item{
-    margin-left: 10px;
-}
-
 .worker-social-link{
     width: 100%;
     height: 100%;
@@ -62,12 +62,12 @@
     color: rgba(175, 177, 184, 1);
     background-color: #ffffff;
     transition: color 550ms var(--timing-function), background-color 550ms var(--timing-function);
+    &:hover,
+    &:focus{
+        background-color: var(--accent-hover-color);
+        color: var(--main-title-color);
+    }
 }
 .worker-social-icon{
     fill: currentColor;
-}
-.worker-social-link:hover,
-.worker-social-link:focus{
-    background-color: var(--accent-hover-color);
-    color: var(--main-title-color);
 }
