--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     margin-bottom: 50px;
 }
-.filter-item{
+.filter-list__item{
     height: 38px;
     &:not(:last-child){
         margin-right: 8px;
