--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -8,11 +8,11 @@
     margin-bottom: 12px;
 }
 
-.modal-field{
+.modal-form__field{
     margin-bottom: 10px;
 }
 
-.modal-form-text{
+.modal-form__text{
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
@@ -24,7 +24,8 @@
     margin-top: 4px;
 }
 
-.modal-form-input{
+.input-wrap__input,
+.modal-form__input{
     display: block;
     width: 100%;
     height: 40px;
@@ -45,7 +46,7 @@
     &:focus{
         border-color: var(--accent-hover-color);
     }
-    &:focus + .input-icon{
+    &:focus + .input-wrap__icon{
         fill: var(--accent-hover-color);
     }
     &::placeholder{
@@ -57,7 +58,7 @@
 
 }
 
-.input-icon{
+.input-wrap__icon{
     position: absolute;
     left: 10px;
     top: 50%;
@@ -65,7 +66,11 @@
     transition: fill 250ms var(--timing-function);
 }
 
-.check-text{
+.modal-form__input{
+
+}
+
+.check__text{
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -77,7 +82,7 @@
     margin-top: 20px;
 }
 
-.check-item{
+.check__item{
     width: 16px;
     height: 15px;
     border: 2px solid #000000;
@@ -86,19 +91,18 @@
     align-items: center;
     justify-content: center;
     margin-right: 7px;
-    .modal-check:checked + .check-text &{
+    .modal-check:checked + .check__text &{
     background-color: var(--accent-hover-color);
     border: none;
     }
 }
-.check-icon{
+.check__icon{
     fill: #ffffff;
 }
 
 .contract-link{
     color: rgba(33, 150, 243, 1);
     margin-left: 5px;
-
 }
 
 .modal-btn{
