--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -3,7 +3,7 @@
     padding-bottom: 94px;
 }
 
-.clients-title{
+.clients__title{
     font-weight: 700;
     text-align: center;
     font-size: 36px;
@@ -18,7 +18,7 @@
     justify-content: center;
 }
 
-.client-link{
+.clients-list__link{
     display: flex;
     width: 100%;
     height: 100%;
@@ -36,15 +36,15 @@
     }
 }
 
-.clients-item{
+.clients-list__item{
     display: block;
     width: 170px;
     height: 92px;
-    & + .clients-item{
+    & + &{
         margin-left: 30px;
     }
 }
 
-.clients-link-icon{
+.clients-list__icon{
     fill: currentColor;
 }
