--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -57,7 +57,7 @@
     color: rgba(255, 255, 255, 0.6);
     transition: color 250ms var(--timing-function);
 }
-.footer-item:not(:last-child){
+.contacts-list-footer__item:not(:last-child){
     margin-bottom: 10px;
 }
 
@@ -66,7 +66,7 @@
 .join{
     margin-left: 70px;
 }
-.join-title{
+.join__title{
     font-weight: 700px;
     font-size: 14px;
     line-height: 1.14;
@@ -80,15 +80,15 @@
     margin-top: 20px;
 }
 
-.join-social-item{
+.join-list__social-item{
     width: 44px;
     height: 44px;
-    & + .join-social-item{
+    & + &{
         margin-left: 10px;
     }
 }
 
-.join-social-link{
+.join-list__social-link{
     width: 100%;
     height: 100%;
     display: flex;
@@ -104,7 +104,7 @@
     }
 }
 
-.join-social-icon{
+.join-list__social-icon{
     fill: currentColor;
 }
 
@@ -118,12 +118,12 @@
     display: block;
 }
 
-.subscribe-text{
+.subscribe__text{
     display: flex;
     align-items: baseline;
 }
 
-.subscribe-title{
+.subscribe__title{
     font-weight: 700px;
     font-size: 14px;
     line-height: 1.14;
@@ -133,7 +133,7 @@
     margin-bottom: 20px;
 }
 
-.subscribe-input{
+.subscribe__input{
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -154,7 +154,7 @@
     }
 }
 
-.subscribe-btn{
+.subscribe__btn{
     display: flex;
     align-items: center;
     width: 200px;
@@ -170,6 +170,6 @@
     margin-left: 12px;
 }
 
-.subscribe-icon{
+.subscribe__icon{
     margin-left: 10px;
 }
