--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,7 +13,7 @@
     background-size: cover;
 }
 
-.hero-title{
+.hero__title{
     width: 696px;
     margin-top: 0;
     margin-left: auto;
@@ -28,7 +28,7 @@
     margin-bottom: 30px;
 }
 
-.hero-button{
+.hero__button{
     display: block;
     box-sizing: border-box;
     font-family:inherit;
