--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -44,7 +44,7 @@
     transition: fill 250ms var(--timing-function);
 }
 
-.modal__close-icon:hover{
+.modal__icon:hover{
     fill: var(--accent-hover-color);
 }
 
