--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -9,7 +9,7 @@ width: 270px;
     }
 }
 
-.about-list__head{
+.about-list__title{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
@@ -19,7 +19,7 @@ width: 270px;
     margin-bottom: 10px; 
 }
 
-.about-list__icon{
+.about-list__box{
     display: flex;
     height: 120px;
     justify-content: center;
