--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ ul {
   padding: 0;
 }
 
-.link {
+a {
   text-decoration: none;
 }
 
@@ -54,6 +54,7 @@ ul {
 }
 
 .logo {
+  text-decoration: none;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -63,13 +64,14 @@ ul {
   padding-top: 24px;
   padding-bottom: 25px;
   margin-right: 93px;
-}
-
-.logo-web {
   color: var(--accent-color);
 }
 
-.logo-studio {
+.logo:hover, .logo:focus {
+  color: var(--accent-hover-color);
+}
+
+.logo__dark {
   color: var(--secondary-title-color);
 }
 
@@ -130,7 +132,7 @@ ul {
   transition: fill 250ms var(--timing-function);
 }
 
-.modal__close-icon:hover {
+.modal__icon:hover {
   fill: var(--accent-hover-color);
 }
 
@@ -194,11 +196,6 @@ ul {
   border-color: var(--accent-hover-color);
 }
 
-.input-wrap__input:focus + .input-wrap__icon,
-.modal-form__input:focus + .input-wrap__icon {
-  fill: var(--accent-hover-color);
-}
-
 .input-wrap__input::placeholder,
 .modal-form__input::placeholder {
   font-weight: 400;
@@ -212,6 +209,11 @@ ul {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms var(--timing-function);
+}
+
+.input-wrap__input:focus + .input-wrap__icon,
+.modal-form__input:focus + .input-wrap__icon {
+  fill: var(--accent-hover-color);
 }
 
 .check__text {
@@ -247,8 +249,10 @@ ul {
 }
 
 .contract-link {
-  color: #2196f3;
+  display: inline-block;
+  color: var(--accent-color);
   margin-left: 5px;
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .modal-btn {
@@ -270,16 +274,11 @@ ul {
   letter-spacing: 0.06em;
 }
 
-.link:hover,
-.link:focus {
-  color: var(--accent-hover-color);
-}
-
 .header {
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav {
+.header__container {
   display: flex;
 }
 
@@ -288,15 +287,15 @@ ul {
   align-items: center;
 }
 
-.header-list {
+.site-nav {
   display: flex;
 }
 
-.header-list__item {
+.site-nav__item {
   font-family: Roboto;
 }
 
-.header-list__item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -306,7 +305,7 @@ ul {
   margin-left: auto;
 }
 
-.header-list__link {
+.site-nav__link {
   display: block;
   font-weight: 500;
   font-size: 14px;
@@ -318,19 +317,7 @@ ul {
   transition: color 250ms var(--timing-function);
 }
 
-.header-list__light {
-  display: block;
-  position: relative;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color 250ms var(--timing-function);
-}
-
-.header-list__light.current::after {
+.site-nav__link.site-nav-link__current::after {
   content: "";
   display: block;
   position: absolute;
@@ -344,11 +331,29 @@ ul {
   transition: color 250ms var(--timing-function);
 }
 
-.current {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-hover-color);
 }
 
-.contact {
+.site-nav-link__current {
+  display: block;
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--accent-hover-color);
+  transition: color 250ms var(--timing-function);
+}
+
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+
+.contacts__link {
   display: flex;
   font-weight: 500;
   font-size: 14px;
@@ -358,42 +363,29 @@ ul {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--main-text-color);
+  transition: color 250ms var(--timing-function);
 }
 
-.header-contacts-list__item:not(:last-child) {
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent-hover-color);
+}
+
+.contacts__item:not(:last-child) {
   display: block;
   margin-right: 50px;
 }
 
-.icon-envelope {
+.contacts-link__icon {
   display: flex;
   align-items: center;
   margin-right: 10px;
   fill: currentColor;
 }
 
-.icon-envelope::before {
+.contacts-link__icon::before {
   content: "";
   display: block;
-  width: 16px;
-  height: 12px;
-  background-image: url(../images/svg/envelope.svg);
-  background-size: contain;
-}
-
-.icon-phone {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.icon-phone::before {
-  content: "";
-  display: block;
-  width: 10px;
-  height: 16px;
-  background-image: url(../images/svg/phone.svg);
+  width: 100%;
   background-size: contain;
 }
 
@@ -456,7 +448,7 @@ ul {
   margin-right: 30px;
 }
 
-.about-list__head {
+.about-list__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
@@ -466,7 +458,7 @@ ul {
   margin-bottom: 10px;
 }
 
-.about-list__icon {
+.about-list__box {
   display: flex;
   height: 120px;
   justify-content: center;
@@ -485,11 +477,11 @@ ul {
   color: var(--main-text-color);
 }
 
-.work {
+.section-no-padding-top {
   padding-top: 0;
 }
 
-.work__title {
+.section__title {
   font-weight: 700;
   text-align: center;
   font-size: 36px;
@@ -537,7 +529,7 @@ img {
   color: #FFFFFF;
 }
 
-.team {
+.section-ather-background {
   max-width: 1600px;
   margin: 0 auto;
   background-color: #f5f4fa;
@@ -556,7 +548,7 @@ img {
   display: flex;
 }
 
-.team-list__name {
+.team-list__title {
   font-style: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -564,13 +556,13 @@ img {
   color: var(--secondary-title-color);
 }
 
-.team-list__text {
+.team-list__wrapper {
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
 }
 
-.team-list__prof {
+.team-list__text {
   font-size: 16px;
   line-height: 1.17;
   letter-spacing: 0.03em;
@@ -578,22 +570,22 @@ img {
   margin-top: 10px;
 }
 
-.worker-social__list {
+.social {
   display: flex;
   justify-content: center;
   margin-top: 16px;
 }
 
-.worker-social__item {
+.social__item {
   width: 44px;
   height: 44px;
 }
 
-.worker-social__item + .worker-social__item {
+.social__item + .worker-social__item {
   margin-left: 10px;
 }
 
-.worker-social__link {
+.social__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -605,36 +597,21 @@ img {
   transition: color 550ms var(--timing-function), background-color 550ms var(--timing-function);
 }
 
-.worker-social__link:hover, .worker-social__link:focus {
+.social__link:hover, .social__link:focus {
   background-color: var(--accent-hover-color);
   color: var(--main-title-color);
 }
 
-.worker-social__icon {
+.social__icon {
   fill: currentColor;
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.clients__title {
-  font-weight: 700;
-  text-align: center;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: var(--secondary-title-color);
-  margin-bottom: 50px;
-}
-
-.clients-list {
   display: flex;
   justify-content: center;
 }
 
-.clients-list__link {
+.clients__link {
   display: flex;
   width: 100%;
   height: 100%;
@@ -646,22 +623,22 @@ img {
   transition: color 250ms var(--timing-function), border-color 250ms var(--timing-function);
 }
 
-.clients-list__link:hover, .clients-list__link:focus {
+.clients__link:hover, .clients__link:focus {
   color: var(--accent-hover-color);
   border-color: var(--accent-hover-color);
 }
 
-.clients-list__item {
+.clients__item {
   display: block;
   width: 170px;
   height: 92px;
 }
 
-.clients-list__item + .clients-list__item {
+.clients__item + .clients__item {
   margin-left: 30px;
 }
 
-.clients-list__icon {
+.clients__icon {
   fill: currentColor;
 }
 
@@ -683,31 +660,28 @@ img {
   flex-grow: 1;
 }
 
-.logo-footer {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
-
-.footer-link {
+.contacts-footer__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
   transition: color 250ms var(--timing-function);
 }
 
-.logo-studio-footer {
+.contacts-footer__link:first-child {
   color: var(--main-title-color);
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
+}
+
+.contacts-footer__link:nth-child(n+1) {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.contacts-footer__link:hover, .contacts-footer__link:focus {
+  color: var(--accent-hover-color);
+}
+
+.logo-light {
+  color: var(--main-title-color);
 }
 
 .footer-address {
@@ -715,21 +689,12 @@ img {
   margin-top: 20px;
 }
 
-.contacts-list-footer {
+.contacts-footer {
   display: block;
   text-align: left;
 }
 
-.footer-contact {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms var(--timing-function);
-}
-
-.contacts-list-footer__item:not(:last-child) {
+.contacts-footer__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -746,22 +711,22 @@ img {
   color: var(--main-title-color);
 }
 
-.join-list {
+.join-social {
   display: flex;
   justify-content: center;
   margin-top: 20px;
 }
 
-.join-list__social-item {
+.join-social__item {
   width: 44px;
   height: 44px;
 }
 
-.join-list__social-item + .join-list__social-item {
+.join-social__item + .join-social__item {
   margin-left: 10px;
 }
 
-.join-list__social-link {
+.join-social__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -773,11 +738,11 @@ img {
   transition: background-color 250ms var(--timing-function);
 }
 
-.join-list__social-link:hover, .join-list__social-link:focus {
+.join-social__link:hover, .join-social__link:focus {
   background-color: var(--accent-hover-color);
 }
 
-.join-list__social-icon {
+.join-social__icon {
   fill: currentColor;
 }
 
@@ -790,7 +755,7 @@ img {
   display: block;
 }
 
-.subscribe__text {
+.subscribe__wrapper {
   display: flex;
   align-items: baseline;
 }
@@ -860,7 +825,7 @@ img {
   margin-right: 8px;
 }
 
-.filter-oll {
+.filter-list-oll__button {
   box-sizing: border-box;
   font-family: inherit;
   min-width: 73px;
@@ -876,7 +841,7 @@ img {
   transition-timing-function: var(--timing-function);
 }
 
-.filter {
+.filter-list__button {
   height: 38px;
   font-weight: 500;
   font-size: 16px;
@@ -905,7 +870,7 @@ img {
   margin-top: 30px;
 }
 
-.portfolio-text {
+.portfolio-box {
   width: 369px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -917,7 +882,7 @@ img {
   border-bottom: 1px solid  #EEEEEE;
 }
 
-.portfolio-text__head {
+.portfolio-box__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -925,7 +890,7 @@ img {
   color: var(--secondary-title-color);
 }
 
-.portfolio-text__sort {
+.portfolio-box__text {
   font-size: 16px;
   line-height: 1.17;
   letter-spacing: 0.03em;
@@ -933,22 +898,22 @@ img {
   margin-top: 10px;
 }
 
-.portfolio-link {
+.portfolio-list__link {
   display: block;
   transition: box-shadow 250ms var(--timing-function);
 }
 
-.portfolio-link:hover, .portfolio-link:focus {
+.portfolio-list__link:hover, .portfolio-list__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-item__wrap {
+.portfolio-list__wrap {
   position: relative;
   overflow: hidden;
   height: 294px;
 }
 
-.portfolio-item__text {
+.portfolio-list__text {
   position: absolute;
   top: 0;
   left: 0;
@@ -965,11 +930,19 @@ img {
   transition: transform 250ms var(--timing-function);
 }
 
-.portfolio-list__item:hover .portfolio-item__text,
-.portfolio-list__item:focus .portfolio-item__text {
+.portfolio-list__link:hover .portfolio-list__text,
+.portfolio-list__link:focus .portfolio-list__text {
   transform: translateY(0);
   transition-property: transform, box-shadow;
-  transition-duration: 500ms;
+  transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+}
+
+.portfolio-box__text {
+  font-size: 16px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  margin-top: 10px;
 }
 /*# sourceMappingURL=main.css.map */
