--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,4 +1,5 @@
 .logo{
+    text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -8,11 +9,13 @@
     padding-top: 24px;
     padding-bottom: 25px;
     margin-right: 93px;
-}
-.logo-web {
     color: var(--accent-color);
-    
+    &:hover,
+    &:focus{
+        color: var(--accent-hover-color);
+    }
 }
-.logo-studio {
+
+.logo__dark {
     color: var(--secondary-title-color);
 }
