--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,24 +1,24 @@
+// .clients{
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+// }
+
+// .clients__title{
+//     font-weight: 700;
+//     text-align: center;
+//     font-size: 36px;
+//     line-height: 1.16;
+//     letter-spacing: 0.03em;
+//     color: var(--secondary-title-color);
+//     margin-bottom: 50px;
+// }
+
 .clients{
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.clients__title{
-    font-weight: 700;
-    text-align: center;
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    color: var(--secondary-title-color);
-    margin-bottom: 50px;
-}
-
-.clients-list{
     display: flex;
     justify-content: center;
 }
 
-.clients-list__link{
+.clients__link{
     display: flex;
     width: 100%;
     height: 100%;
@@ -36,7 +36,7 @@
     }
 }
 
-.clients-list__item{
+.clients__item{
     display: block;
     width: 170px;
     height: 92px;
@@ -45,6 +45,6 @@
     }
 }
 
-.clients-list__icon{
+.clients__icon{
     fill: currentColor;
 }
