--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,49 +15,40 @@
 .footer-firstblock{
     flex-grow: 1;
 }
-.logo-footer{
-    font-family: 'Raleway', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-}
-.footer-link{
+
+.contacts-footer__link{
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    &:first-child{
+        color: var(--main-title-color);
+    }
+    &:nth-child(n+1){
+        color: rgba(255, 255, 255, 0.6);
+    }
     transition: color 250ms var(--timing-function);
+    &:hover,
+    &:focus{
+    color: var(--accent-hover-color);
+    }
 }
 
-.logo-studio-footer{
+.logo-light{
     color: var(--main-title-color);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
 }
+
 .footer-address{
     font-style: normal;
     margin-top: 20px;
 }
 
-.contacts-list-footer{
+.contacts-footer{
     display: block;
     text-align: left;
 }
-.footer-contact{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    transition: color 250ms var(--timing-function);
-}
-.contacts-list-footer__item:not(:last-child){
+
+.contacts-footer__item:not(:last-child){
     margin-bottom: 10px;
 }
 
@@ -74,13 +65,13 @@
     color: var(--main-title-color);
 }
 
-.join-list{
+.join-social{
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
 
-.join-list__social-item{
+.join-social__item{
     width: 44px;
     height: 44px;
     & + &{
@@ -88,7 +79,7 @@
     }
 }
 
-.join-list__social-link{
+.join-social__link{
     width: 100%;
     height: 100%;
     display: flex;
@@ -104,7 +95,7 @@
     }
 }
 
-.join-list__social-icon{
+.join-social__icon{
     fill: currentColor;
 }
 
@@ -118,7 +109,7 @@
     display: block;
 }
 
-.subscribe__text{
+.subscribe__wrapper{
     display: flex;
     align-items: baseline;
 }
@@ -152,6 +143,7 @@
         border-color: var(--main-title-color);
         color: var(--main-title-color);
     }
+    
 }
 
 .subscribe__btn{
