--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,7 +1,7 @@
-.work{
+.section-no-padding-top{
     padding-top: 0;
 }
-.work__title{
+.section__title{
     font-weight: 700;
     text-align: center;
     font-size: 36px;
