--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,13 +3,12 @@
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-    & > .portfolio-list__item{
-        flex-basis: calc(100% / 3 - 30px);
-        margin-left: 30px;
-        margin-top: 30px;
-    }
 }
-
+.portfolio-list > .portfolio-list__item{
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+}
 
 .portfolio-box{
     width: 369px;
